f5e66296-a68f-4fae-ab34-616938e14a6b/bc5fa525-1f32-4c53-bf17-b98dd59ff12e/baaa5a57-1f2e-48bd-95a4-9103c847a98a/kubernates/solr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solr-deployment-745c261a-c29a-41c1-a58d-dc4c35072b19
  namespace: 2e49f282-85d5-4866-af7d-8133a75e6769
  labels:
    app: solr-745c261a-c29a-41c1-a58d-dc4c35072b19
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solr-745c261a-c29a-41c1-a58d-dc4c35072b19
  template:
    metadata:
      labels:
        app: solr-745c261a-c29a-41c1-a58d-dc4c35072b19
    spec:
      containers:
        - name: solr-745c261a-c29a-41c1-a58d-dc4c35072b19
          image: ravi8881/2e49f282-85d5-4866-af7d-8133a75e6769-f5e66296-a68f-4fae-ab34-616938e14a6b-bc5fa525-1f32-4c53-bf17-b98dd59ff12e-baaa5a57-1f2e-48bd-95a4-9103c847a98a:4.0.0
          ports:
            - containerPort: 8983
          volumeMounts:
            - name: solr-data-volume
              mountPath: /data # This path is where Solr looks for its cores
      volumes:
        - name: solr-data-volume
          persistentVolumeClaim:
            claimName: baaa5a57-1f2e-48bd-95a4-9103c847a98a # This name must match the PVC metadata.name
      securityContext:
        runAsUser: 8983
        runAsGroup: 8983
        fsGroup: 8983
