f5e66296-a68f-4fae-ab34-616938e14a6b/bc5fa525-1f32-4c53-bf17-b98dd59ff12e/baaa5a57-1f2e-48bd-95a4-9103c847a98a/kubernates/solr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solr-service-66948276-7d92-476d-8cf8-1ebc5c8aafbe
  namespace: 2e49f282-85d5-4866-af7d-8133a75e6769
  labels:
    app: solr-66948276-7d92-476d-8cf8-1ebc5c8aafbe
spec:
  selector:
    app: solr-66948276-7d92-476d-8cf8-1ebc5c8aafbe
  ports:
    - port: 80
      targetPort: 8983
      protocol: TCP
  type: ClusterIP
