f5e66296-a68f-4fae-ab34-616938e14a6b/bc5fa525-1f32-4c53-bf17-b98dd59ff12e/baaa5a57-1f2e-48bd-95a4-9103c847a98a/kubernates/solr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solr-ingress-9317dd5e-4641-4ed6-ac0c-54f3f7636e6d
  namespace: 2e49f282-85d5-4866-af7d-8133a75e6769
  labels:
    app: solr-9317dd5e-4641-4ed6-ac0c-54f3f7636e6d
spec:
  ingressClassName: nginx
  rules:
    - host: park-cf3i9w.kdh0vc.us-east-2.febe.kbs
      http:
        paths:
          - path: /solr/
            pathType: Prefix
            backend:
              service:
                name: solr-service-9317dd5e-4641-4ed6-ac0c-54f3f7636e6d
                port:
                  number: 80
